--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "webpack初期設定",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack serve --mode development --watch",
-    "build": "webpack --mode production"
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "start": "webpack serve --mode development"
   },
   "keywords": [],
   "author": "",
@@ -46,6 +47,7 @@
     "@studio-freight/lenis": "^1.0.39",
     "glslify-hex": "^2.1.1",
     "lil-gui": "^0.19.1",
-    "three": "^0.142"
+    "three": "^0.162",
+    "three-js-csg": "^72.0.0"
   }
 }
