--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "imagemin-webpack-plugin": "^2.4.2",
     "mini-css-extract-plugin": "^2.8.1",
     "raw-loader": "^4.0.2",
+    "rechoir": "^0.8.0",
     "sass": "^1.71.1",
     "sass-loader": "^14.1.1",
     "shader-loader": "^1.3.1",
@@ -40,7 +41,7 @@
     "vanta": "^0.5.24",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.2",
+    "webpack-dev-server": "^5.0.4",
     "webpack-glsl-loader": "^1.0.1"
   },
   "dependencies": {
