--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "clean": "rm -rf ./dist/*",
-    "dev": "npm run clean && webpack --mode development",
-    "build": "npm run clean && webpack --mode production",
-    "start": "npm run clean && webpack serve --mode development"
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "start": "webpack serve --mode development --watch"
   },
   "keywords": [],
   "author": "",
